correction erreur sur url dans mon swagger.php
